<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/bt_field_container">

        <ImageView
            android:id="@+id/bt_card_form_card_number_icon"
            style="@style/bt_card_form_icon"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:labelFor="@+id/bt_card_form_card_number"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/bt_edit_text_icon_padding"
            android:paddingStart="@dimen/bt_edit_text_icon_padding"
            tools:ignore="RtlCompat">

            <com.braingroom.user.utils.CustomView.CardView.view.CardEditText
                android:id="@+id/bt_card_form_card_number"
                style="@style/bt_card_form_field"
                android:contentDescription="@string/bt_form_hint_card_number"
                android:hint="@string/bt_form_hint_card_number"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container"
        android:paddingEnd="0dp"
        android:paddingLeft="@dimen/bt_no_edit_text_icon_padding"
        android:paddingStart="@dimen/bt_no_edit_text_icon_padding"
        android:weightSum="2"
        tools:ignore="RtlCompat">

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:labelFor="@+id/bt_card_form_expiration">

            <com.braingroom.user.utils.CustomView.CardView.view.ExpirationDateEditText
                android:id="@+id/bt_card_form_expiration"
                style="@style/bt_card_form_field"
                android:contentDescription="@string/bt_form_hint_expiration"
                android:hint="@string/bt_form_hint_expiration" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:labelFor="@+id/bt_card_form_cvv">

            <com.braingroom.user.utils.CustomView.CardView.view.CvvEditText
                android:id="@+id/bt_card_form_cvv"
                style="@style/bt_card_form_field"
                android:contentDescription="@string/bt_form_hint_cvv"
                android:hint="@string/bt_form_hint_cvv" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container"
        android:weightSum="2">

        <ImageView
            android:id="@+id/bt_card_form_postal_code_icon"
            style="@style/bt_card_form_icon"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:labelFor="@+id/bt_card_form_postal_code"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/bt_edit_text_icon_padding"
            android:paddingStart="@dimen/bt_edit_text_icon_padding"
            tools:ignore="RtlCompat">

            <com.braingroom.user.utils.CustomView.CardView.view.PostalCodeEditText
                android:id="@+id/bt_card_form_postal_code"
                style="@style/bt_card_form_field"
                android:contentDescription="@string/bt_form_hint_postal_code"
                android:hint="@string/bt_form_hint_postal_code" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/bt_field_container"
        android:weightSum="5">

        <ImageView
            android:id="@+id/bt_card_form_mobile_number_icon"
            style="@style/bt_card_form_icon"
            tools:ignore="ContentDescription" />

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:labelFor="@+id/bt_card_form_country_code"
            android:paddingEnd="0dp"
            android:paddingLeft="@dimen/bt_edit_text_icon_padding"
            android:paddingStart="@dimen/bt_edit_text_icon_padding"
            tools:ignore="RtlCompat">

            <com.braingroom.user.utils.CustomView.CardView.view.CountryCodeEditText
                android:id="@+id/bt_card_form_country_code"
                style="@style/bt_card_form_field"
                android:contentDescription="@string/bt_form_hint_country_code"
                android:hint="@string/bt_form_hint_country_code" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/bt_text_input_layout"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:labelFor="@+id/bt_card_form_mobile_number">

            <com.braingroom.user.utils.CustomView.CardView.view.MobileNumberEditText
                android:id="@+id/bt_card_form_mobile_number"
                style="@style/bt_card_form_field"
                android:contentDescription="@string/bt_form_hint_mobile_number"
                android:hint="@string/bt_form_hint_mobile_number" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/bt_card_form_mobile_number_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp"
        android:paddingEnd="0dp"
        android:paddingLeft="@dimen/bt_mobile_number_explanation_padding"
        android:paddingStart="@dimen/bt_mobile_number_explanation_padding"
        android:visibility="gone"
        tools:ignore="RtlCompat" />

</merge>
