<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.braingroom.user.viewmodel.fragment.OTPViewModel" />

    </data>


        <LinearLayout
            android:id="@+id/layout_otp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#f7f7f7"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="100dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/search_height"
                android:paddingRight="@dimen/search_height"
                android:text="@string/msg_sit_back"
                android:textSize="@dimen/text_size_medium"
                app:font='@{@string/robotoBold}' />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/search_height"
                android:paddingRight="@dimen/search_height"
                android:text="@string/msg_manual_otp"
                android:textSize="@dimen/text_size_small"
                app:font='@{@string/robotoRegular}' />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/inputOtp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@android:color/white"
                    android:gravity="center_horizontal"
                    android:hint="@string/lbl_enter_otp"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="10dp"
                    android:text="@={vm.OTP}"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/_13sdp" />

                <Button
                    android:id="@+id/btn_verify_otp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/margin_med"
                    android:layout_toRightOf="@id/inputOtp"
                    android:background="@color/colorPrimaryDark"
                    android:onClick="@{vm.submitOTP}"
                    android:paddingLeft="@dimen/margin_large"
                    android:paddingRight="@dimen/margin_large"
                    android:text="@string/lbl_submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_medium" />




            </RelativeLayout>

            <TextView
                android:id="@+id/btn_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginTop="@dimen/_18sdp"
                android:onClick="@{vm.onResendOTP}"
                android:text="Resend OTP"
                android:textSize="@dimen/text_size_large" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_edit_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_large"
                    android:text="@{vm.mobileNumber}"
                    android:textSize="@dimen/text_size_large"
                    app:font='@{@string/robotoBold}' />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:onClick="@{vm.onEditMobile}"
                    android:src="@drawable/ic_edit_mobile"
                    android:tint="@color/primary_blue" />
            </LinearLayout>
        </LinearLayout>
</layout>
